Fix nav bar closed z-index

--- a/react-app/src/components/NavigationBar/NavigationBar.module.css
+++ b/react-app/src/components/NavigationBar/NavigationBar.module.css
@@ -11,13 +11,16 @@
   justify-content: left;
   z-index: 0;
 }
+
 .popupOpen {
   z-index: 2;
 }
+
 .closed {
   width: 50px;
   box-shadow: 0px 0px 0px;
   height: 50px;
+  z-index: 2;
 }
 
 .arrowBox {
